# nerlo-cli

./: README.md  pyproject.toml
.github/workflows/: publish.yml
nerlo_cli/: _logging.py  commands.py  main.py
tests/: test_cli.py
